add tests that check the ConsoleExplainErrorAction api methods